# Real-Time-Sign-Language-to-Text

./: .gitignore  Dockerfile  README.md  check_data.py  data_collection.py  dataset.csv  live_prediction.py  normalize_dataset.py  pyproject.toml  requirements.txt  train_model.py
artifacts/: model.pkl
scripts/: check_data.py  data_collection.py  train_model.py
src/: __init__.py  classifier.py  config.py  feature_extractor.py  renderer.py  text_accumulator.py
tests/: test_classifier.py  test_text_accumulator.py
