[project]
name = "real-time-sign-language-to-text"
version = "1.0.0"
description = "Real-time Hebrew Sign Language recognition using MediaPipe hand landmarks and a Random Forest classifier"
authors = [
    { name = "Rivka445"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "mediapipe",
    "scikit-learn",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "Pillow",
]

[project.scripts]
sign-language = "live_prediction:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
